--- a/src/template.html
+++ b/src/template.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorldPizza</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="root.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
+        <h1 class="logo">WorldPizza</h1>
         <nav class="nav">
-            <button class="nav__item home">Home</button>
-            <button class="nav__item menu">Menu</button>
-            <button class="nav__item contact">Contact</button>
+            <button class="nav__item home">HOME</button>
+            <button class="nav__item menu">MENU</button>
+            <button class="nav__item contact">CONTACT</button>
         </nav>
     </header>
     <main id="content"></main>
+    <footer class="footer"> ⓒ Fernando Zárate 2024 </footer>
 </body>
 </html>
