add loadHome modules

--- a/src/template.html
+++ b/src/template.html
@@ -12,12 +12,12 @@
     <header class="header">
         <h1 class="logo">WorldPizza</h1>
         <nav class="nav">
-            <button class="nav__item home">HOME</button>
-            <button class="nav__item menu">MENU</button>
-            <button class="nav__item contact">CONTACT</button>
+            <button class="nav__item" id="nav__home">HOME</button>
+            <button class="nav__item" id="nav__menu">MENU</button>
+            <button class="nav__item" id="nav__contact">CONTACT</button>
         </nav>
     </header>
-    <main id="content"></main>
+    <main id="main-content"></main>
     <footer class="footer"> ⓒ Fernando Zárate 2024 </footer>
 </body>
 </html>
