Add loadMenu module

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,8 @@
             <button class="nav__item" id="nav__contact">CONTACT</button>
         </nav>
     </header>
-    <main id="main-content"></main>
+    <main id="main-content">
+    </main>
     <footer class="footer"> ⓒ Fernando Zárate 2024 </footer>
 </body>
 </html>
