Add loadContact module

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
             <button class="nav__item" id="nav__contact">CONTACT</button>
         </nav>
     </header>
-    <main id="main-content">
+    <main class="main__content">
     </main>
     <footer class="footer"> ⓒ Fernando Zárate 2024 </footer>
 </body>
