Clear contents of gh-pages

--- a/src/template.html
+++ b/src/template.html
@@ -15,8 +15,7 @@
             <button class="nav__item" id="nav__contact">CONTACT</button>
         </nav>
     </header>
-    <main class="main__content">
-    </main>
+    <main class="main__content"></main>
     <footer class="footer"> ⓒ Fernando Zárate 2024 </footer>
 </body>
 </html>
